Fix trigger button align issue.

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -39,7 +39,7 @@ i.trigger {
   height: 64px;
   cursor: pointer;
   transition: all 0.3s, padding 0s;
-  padding: 22px 24px;
+  padding: 0px 24px;
   &:hover {
     background: @pro-header-hover-bg;
   }
